release/scripts/templates_py/ui_previews_dynamic_enum.py
@@ -25,9 +25,12 @@ import bpy
 
 def enum_previews_from_directory_items(self, context):
     """EnumProperty callback"""
-    wm = context.window_manager
-
     enum_items = []
+
+    if context is None:
+        return enum_items
+
+    wm = context.window_manager
     directory = wm.my_previews_dir
 
     # Get the preview collection (defined in register func).
